--- a/index.html
+++ b/index.html
@@ -58,14 +58,12 @@
                 </div>
                 <!-- サブメニュー -->
                 <div class="dropdown">
-                  <div class="mobile-online-click">
                     <div class="left-svg-icon">
                       <svg aria-hidden="true" focusable="false" fill="none" width="12" viewBox="0 0 10 10">
                         <path d="m3 9 4-4-4-4" stroke="currentColor" stroke-linecap="square"></path>
                       </svg>
                     </div>
                     <a href="#online-store" class="click-nav-link">ONLINE STORE</a>
-                  </div>
                   <div class="footer-contair1">
                     <div class="footer-title">
                       <p>FURNITURE</p>
@@ -129,7 +127,7 @@
             <div class="footer-contair1">
               <div class="footer-title">
                 <p>FURNITURE</p>
-                <span class="toggle-button">+</span>
+                <div class="toggle-button"></div>
               </div>
               <ul class="footer-nav">
                 <li class="footer-nav-item"><a href="#">SOFA</a></li>
@@ -144,21 +142,22 @@
             <div class="footer-contair2">
               <div class="footer-title">
                 <p>INTERIOR</p>
-                <span class="toggle-button">+</span>
+                <div class="toggle-button"></div>
               </div>
               <ul class="footer-nav">
                 <li class="footer-nav-item"><a href="#">LIGHTING</a></li>
-                <li class="footer-nav-item"><a href="#">FABRIC</a></li>
                 <li class="footer-nav-item"><a href="#">ROOM SPEAKER</a></li>
-                <li class="footer-nav-item"><a href="#">INTERIOR</a></li>
                 <li class="footer-nav-item"><a href="#">TABLEWARE</a></li>
+                <li class="footer-nav-item"><a href="#">FABRIC</a></li>
+                <li class="footer-nav-item"><a href="#">CANDLE</a></li>
+                <li class="footer-nav-item"><a href="#">FRAGRANCE</a></li>
                 <li class="footer-nav-item"><a href="#">ART</a></li>
               </ul>
             </div>
             <div class="footer-contair3">
               <div class="footer-title">
                 <p>POP UP COLLECTION</p>
-                <span class="toggle-button">+</span>
+                <div class="toggle-button"></div>
               </div>
               <ul class="footer-nav">
                 <li class="footer-nav-item"><a href="#">KIHON NO UTUWA</a></li>
